@@ -323,6 +323,15 @@ name|TestParser
 extends|extends
 name|LuceneTestCase
 block|{
+DECL|field|defaultField
+specifier|final
+specifier|private
+specifier|static
+name|String
+name|defaultField
+init|=
+literal|"contents"
+decl_stmt|;
 DECL|field|analyzer
 specifier|private
 specifier|static
@@ -388,9 +397,9 @@ comment|//initialize the parser
 name|coreParser
 operator|=
 operator|new
-name|CorePlusExtensionsParser
+name|CoreParser
 argument_list|(
-literal|"contents"
+name|defaultField
 argument_list|,
 name|analyzer
 argument_list|)
@@ -924,105 +933,6 @@ name|h
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|testLikeThisQueryXML
-specifier|public
-name|void
-name|testLikeThisQueryXML
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|Query
-name|q
-init|=
-name|parse
-argument_list|(
-literal|"LikeThisQuery.xml"
-argument_list|)
-decl_stmt|;
-name|dumpResults
-argument_list|(
-literal|"like this"
-argument_list|,
-name|q
-argument_list|,
-literal|5
-argument_list|)
-expr_stmt|;
-block|}
-DECL|method|testBoostingQueryXML
-specifier|public
-name|void
-name|testBoostingQueryXML
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|Query
-name|q
-init|=
-name|parse
-argument_list|(
-literal|"BoostingQuery.xml"
-argument_list|)
-decl_stmt|;
-name|dumpResults
-argument_list|(
-literal|"boosting "
-argument_list|,
-name|q
-argument_list|,
-literal|5
-argument_list|)
-expr_stmt|;
-block|}
-DECL|method|testFuzzyLikeThisQueryXML
-specifier|public
-name|void
-name|testFuzzyLikeThisQueryXML
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|Query
-name|q
-init|=
-name|parse
-argument_list|(
-literal|"FuzzyLikeThisQuery.xml"
-argument_list|)
-decl_stmt|;
-comment|//show rewritten fuzzyLikeThisQuery - see what is being matched on
-if|if
-condition|(
-name|VERBOSE
-condition|)
-block|{
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-name|q
-operator|.
-name|rewrite
-argument_list|(
-name|reader
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-name|dumpResults
-argument_list|(
-literal|"FuzzyLikeThis"
-argument_list|,
-name|q
-argument_list|,
-literal|5
-argument_list|)
-expr_stmt|;
-block|}
 DECL|method|testBoostingTermQueryXML
 specifier|public
 name|void
@@ -1186,6 +1096,16 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|//================= Helper methods ===================================
+DECL|method|defaultField
+specifier|protected
+name|String
+name|defaultField
+parameter_list|()
+block|{
+return|return
+name|defaultField
+return|;
+block|}
 DECL|method|analyzer
 specifier|protected
 name|Analyzer
@@ -1207,7 +1127,7 @@ name|coreParser
 return|;
 block|}
 DECL|method|parse
-specifier|private
+specifier|protected
 name|Query
 name|parse
 parameter_list|(
@@ -1251,8 +1171,28 @@ return|return
 name|result
 return|;
 block|}
+DECL|method|rewrite
+specifier|protected
+name|Query
+name|rewrite
+parameter_list|(
+name|Query
+name|q
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|q
+operator|.
+name|rewrite
+argument_list|(
+name|reader
+argument_list|)
+return|;
+block|}
 DECL|method|dumpResults
-specifier|private
+specifier|protected
 name|void
 name|dumpResults
 parameter_list|(
